Source/WebCore/page/Quirks.cpp
@@ -961,4 +961,27 @@ Quirks::StorageAccessResult Quirks::triggerOptionalStorageAccessQuirk(const Elem
     return Quirks::StorageAccessResult::ShouldNotCancelEvent;
 }
 
+bool Quirks::needsVP9FullRangeFlagQuirk() const
+{
+    if (!needsQuirks())
+        return false;
+
+    if (!m_needsVP9FullRangeFlagQuirk)
+        m_needsVP9FullRangeFlagQuirk = equalLettersIgnoringASCIICase(m_document->url().host(), "www.youtube.com");
+
+    return *m_needsVP9FullRangeFlagQuirk;
+}
+
+bool Quirks::needsHDRPixelDepthQuirk() const
+{
+    if (!needsQuirks())
+        return false;
+
+    if (!m_needsHDRPixelDepthQuirk)
+        m_needsHDRPixelDepthQuirk = equalLettersIgnoringASCIICase(m_document->url().host(), "www.youtube.com");
+
+    return *m_needsHDRPixelDepthQuirk;
+}
+
+
 }
